kubernetes/notification-service/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-service
  namespace: quick-haul
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notification-service
  template:
    metadata:
      labels:
        app: notification-service
    spec:
      containers:
      - name: notification-service
        image: sathvik2003/quickhaul-notification:v2`n        command: ["uvicorn", "services.notification_service.app:app", "--host", "0.0.0.0", "--port", "8004"]
        ports:
        - containerPort: 8004
---
apiVersion: v1
kind: Service
metadata:
  name: notification-service
  namespace: quick-haul
spec:
  type: ClusterIP
  ports:
  - port: 8004
    targetPort: 8004
  selector:
    app: notification-service
