kubernetes/notification-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: notification-service
  namespace: quick-haul
spec:
  type: ClusterIP
  ports:
  - port: 8004
    targetPort: 8004
  selector:
    app: notification-service
